; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/tools/perf/util/extr_symbol.c_dso__sort_by_name.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/tools/perf/util/extr_symbol.c_dso__sort_by_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dso = type { i32*, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dso__sort_by_name(%struct.dso* %0, i32 %1) #0 {
  %3 = alloca %struct.dso*, align 8
  %4 = alloca i32, align 4
  store %struct.dso* %0, %struct.dso** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.dso*, %struct.dso** %3, align 8
  %6 = load i32, i32* %4, align 4
  %7 = call i32 @dso__set_sorted_by_name(%struct.dso* %5, i32 %6)
  %8 = load %struct.dso*, %struct.dso** %3, align 8
  %9 = getelementptr inbounds %struct.dso, %struct.dso* %8, i32 0, i32 1
  %10 = load i32*, i32** %9, align 8
  %11 = load i32, i32* %4, align 4
  %12 = zext i32 %11 to i64
  %13 = getelementptr inbounds i32, i32* %10, i64 %12
  %14 = load %struct.dso*, %struct.dso** %3, align 8
  %15 = getelementptr inbounds %struct.dso, %struct.dso* %14, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  %17 = load i32, i32* %4, align 4
  %18 = zext i32 %17 to i64
  %19 = getelementptr inbounds i32, i32* %16, i64 %18
  call void @symbols__sort_by_name(i32* %13, i32* %19)
  ret void
}

declare dso_local i32 @dso__set_sorted_by_name(%struct.dso*, i32) #1

declare dso_local void @symbols__sort_by_name(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
